# hoffman-rpi

./: .clangd  .gitmodules  .telescope_ignore  CMakeLists.txt  blink.c  compile_flags.txt
hofman/: a.out  hofman.cpp
rpi_demo/: CMakeLists.txt  compile_flags.txt
rpi_demo/src/: main.cpp
rpi_demo/src/bt/: bt_sender.cpp  bt_sender.h
rpi_demo/src/huffman/: huffman.cpp  huffman.h
rpi_demo/src/mpu6050/: mpu6050.cpp  mpu6050.h
test_server/: main.py  received_data.txt
